---
source: crates/math-core/tests/error_test.rs
expression: "\\end{matrix}"
---
Error: Unmatched closing token: "\end{...}".
   ╭─[ <input>:1:1 ]
   │
 1 │ \end{matrix}
   │ ──────┬─────  
   │       ╰─────── unmatched "\end{...}"
───╯
